# qa-ai-engineer

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ml_quality_gate.yml
config/: model_config.yaml  thresholds.yaml
docker/: Dockerfile.mock_api  Dockerfile.tests  docker-compose.yml
docs/: ADR.md  CONTRIBUTING.md
examples/aws/: .github-workflow-aws.yml  README.md
examples/aws/cloudwatch/: cloudwatch_reporter.py
examples/aws/lambda/: quality_gate_trigger.py
examples/aws/monitor/: sagemaker_monitor.py
examples/aws/s3/: aws_data_loader.py  conftest_s3.py
examples/aws/sagemaker/: deploy_model.py  test_batch_transform.py  test_endpoint.py
scripts/: generate_report.py  mock_api_server.py
src/ml_quality_gate/: __init__.py  cli.py
src/ml_quality_gate/contracts/: __init__.py  api_schemas.py
src/ml_quality_gate/reporters/: __init__.py  html_reporter.py  slack_notifier.py
src/ml_quality_gate/utils/: __init__.py  config_loader.py  logger.py
src/ml_quality_gate/validators/: __init__.py  data_validator.py  drift_detector.py  fairness_validator.py  model_validator.py
tests/: conftest.py  plugin.py
tests/e2e/: test_full_pipeline.py
tests/fairness/: test_bias.py
tests/integration/: test_prediction_api.py
tests/performance/: load_test_model.js  smoke_test.js
tests/unit/: test_data_quality.py  test_model_metrics.py  test_model_robustness.py
