[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-quality-gate"
version = "1.0.0"
description = "Enterprise ML QA Framework — Big Tech Standards"
authors = [{ name = "QA Engineering Team", email = "qa@yourorg.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

keywords = ["ml", "qa", "testing", "machine-learning", "quality"]

dependencies = [
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "great-expectations>=0.18.0",
    "evidently>=0.4.0",
    "fairlearn>=0.10.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "jinja2>=3.1.3",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
]

# 🔥 DEV DEPENDENCIES (CORRIGIDO)
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.3.0",
    "pytest-rerunfailures>=12.0",
    "black>=24.2.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",

    # 🔥 ESSENCIAL PARA MYPY
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
ml-quality-gate = "ml_quality_gate.cli:main"

# 🔥 IMPORTANTE para src/ layout
[tool.setuptools.packages.find]
where = ["src"]

# -----------------------------
# 🧪 PYTEST
# -----------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--cov=src/ml_quality_gate",
    "--cov-report=html:reports/coverage",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "fairness: Bias tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
]
timeout = 60

# -----------------------------
# 🎨 BLACK
# -----------------------------
[tool.black]
line-length = 120
target-version = ["py311"]

# -----------------------------
# ⚡ RUFF
# -----------------------------
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "N806"]

# -----------------------------
# 🧠 MYPY (CORRIGIDO)
# -----------------------------
[tool.mypy]
python_version = "3.11"
strict = true

# 🔥 EVITA ERROS COM LIBS EXTERNAS
ignore_missing_imports = true

# 🔥 EVITA ERROS CHATOS DESNECESSÁRIOS
disallow_untyped_defs = false
warn_return_any = false

# -----------------------------
# 📊 COVERAGE
# -----------------------------
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/conftest.py"]